# aldtts-experiments

./: .gitignore  pyproject.toml  run.py  run_and_profile.py  test_dataclass.py
aldtts/experiments/: de_ind.py  de_lin.py  de_sqr.py  de_test_dim_data_noise.py  de_test_dim_ind_noise.py  ide_ind.py  ide_lin.py  ide_sqr.py  ide_sqr_GAtest.py  ide_test_dim_data_noise.py  ide_test_dim_ind_noise.py  optimal_query_lin.py  optimal_query_sqr.py
post_experiment_computation/: plot_pvalue.py  plot_pvalue_tests.py  utils.py  utils_rename_exp.py
