[tool.poetry]
name = "aldtts-experiments"
version = "0.2.0"
description = "Experiments for active dependency testing"
authors = ["bela127 <bhb127@outlook.de>"]
license = "MIT"
packages = [
    { include = "aldtts/experiments", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
#aldtts-modules = { path = "/home/bela/Cloud/code/Git/aldtts-modules", develop = true }
aldtts-modules = {git = "https://github.com/bela127/aldtts-modules.git"}
libclang = "<12.0"
coloredlogs = "^15.0.1"
ipython = "^8.0.1"
matplotlib = "^3.5.1"
nptyping = ">=2.0.0a1"
scikit-learn = "^1.0.2"
numpy = "^1.22.3"
scipy = "1.8"
bayesian-optimization = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
black = "^21.6b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = "numpy.typing.mypy_plugin"
