[tool.poetry]
name = "aldtts-experiments"
version = "0.2.0"
description = "Experiments for active dependency testing"
authors = ["bela127 <bhb127@outlook.de>"]
license = "MIT"
packages = [
    { include = "aldtts/experiments", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
#aldtts-modules = { path = "/home/bela/Cloud/code/Git/aldtts-modules", develop = true }
aldtts-modules = {git = "https://github.com/bela127/aldtts-modules.git"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
black = "^21.6b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = "numpy.typing.mypy_plugin"
